feat(asr): asr-audio-recorder

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@electron-forge/plugin-vite": "^7.11.1",
     "@electron/fuses": "^1.8.0",
     "@types/electron-squirrel-startup": "^1.0.2",
-    "@types/ws": "^8.18.1",
+    "@types/react": "^19.2.10",
+    "@types/react-dom": "^19.2.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "electron": "40.1.0",
@@ -40,9 +41,8 @@
     "vite": "^5.4.21"
   },
   "dependencies": {
-    "electron-log": "^5.4.3",
     "electron-squirrel-startup": "^1.0.1",
-    "ws": "^8.19.0",
-    "zod": "^4.3.6"
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4"
   }
 }
