--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "^19.2.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "@vitejs/plugin-react": "^4.3.0",
     "electron": "40.1.0",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.32.0",
