--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/electron-squirrel-startup": "^1.0.2",
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
+    "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-react": "^4.3.0",
@@ -42,8 +43,11 @@
     "vite": "^5.4.21"
   },
   "dependencies": {
+    "electron-log": "^5.4.3",
     "electron-squirrel-startup": "^1.0.1",
     "react": "^19.2.4",
-    "react-dom": "^19.2.4"
+    "react-dom": "^19.2.4",
+    "ws": "^8.19.0",
+    "zod": "^4.3.6"
   }
 }
