fix: use right env template

--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,4 @@ VOLCENGINE_ACCESS_TOKEN=your_access_token_here
 # Resource ID
 # volc.bigasr.sauc = 大模型1.0 流式识别
 # volc.seedasr.sauc = 大模型2.0 流式识别 (推荐)
-VOLCENGINE_RESOURCE_ID=volc.bigasr.sauc
+VOLCENGINE_RESOURCE_ID=volc.bigasr.sauc.duration
