fix: use right env template

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,5 @@ VOLCENGINE_APP_ID=4120356295
 # Access Token (从流式语音识别大模型页面获取，点击眼睛图标查看)
 VOLCENGINE_ACCESS_TOKEN=your_access_token_here
 
-# Resource ID
-# volc.bigasr.sauc = 大模型1.0 流式识别
-# volc.seedasr.sauc = 大模型2.0 流式识别 (推荐)
+# Resource ID (volc.bigasr.sauc.duration = 大模型1.0 流式识别)
 VOLCENGINE_RESOURCE_ID=volc.bigasr.sauc.duration
